inject `MapView`, add map to preview

--- a/Sources/AddNewAddressFeature/Resources/en.lproj/Localizable.strings
+++ b/Sources/AddNewAddressFeature/Resources/en.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 
-"SEARCH_FIELD" = "Search";
+"SEARCH_FIELD" = "Search address";
 "ADD_NEW_ADDRESS_NAVIGATION_TITLE" = "Add New Address";
 "ADD_ADDRESS_BUTTON_TITLE" = "Add Address";
 "CURRENT_LOCATION_BUTTON_TITLE" = "Get current location";
